[gd_scene load_steps=7 format=2]

[ext_resource path="res://audio/kick.wav" type="AudioStream" id=1]
[ext_resource path="res://beat/perc_player.gd" type="Script" id=2]
[ext_resource path="res://beat/beat_player.gd" type="Script" id=3]
[ext_resource path="res://beat/beat_matcher.gd" type="Script" id=4]
[ext_resource path="res://beat/beat_handler.gd" type="Script" id=5]
[ext_resource path="res://beat/beat_display.tscn" type="PackedScene" id=6]

[node name="BeatHandler" type="Node"]
script = ExtResource( 5 )

[node name="BeatPlayer" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BeatMatcher" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BeatDisplay" parent="." instance=ExtResource( 6 )]

[node name="PercPlayer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Kick" type="AudioStreamPlayer" parent="PercPlayer"]
stream = ExtResource( 1 )

[node name="Snare" type="AudioStreamPlayer" parent="PercPlayer"]
stream = ExtResource( 1 )
